Fixed spacing on artist name for all artists page

--- a/src/containers/ArtistDetail/index.css
+++ b/src/containers/ArtistDetail/index.css
@@ -28,7 +28,7 @@ button {
     margin-right: 1vh;
 }
 
-.desc {
+.artistDetail .desc {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
